--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "start:dev": "webpack-dev-server"
+    "start:dev": "webpack-dev-server",
+    "css-build": "node-sass --omit-source-map-url src/styles/styles.scss src/styles/styles.css",
+    "css-watch": "npm run css-build -- --watch",
+    "css-start": "npm run css-watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bulma": "^0.7.4",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "highlight.js": "^9.15.6",
+    "image-webpack-loader": "^4.6.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
